[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/LevelUpField.gd" type="Script" id=1]
[ext_resource path="res://Resources/Retron2000Small.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.780392, 0.72549, 0.254902, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[node name="LevelUpField" type="HBoxContainer"]
margin_right = 293.0
margin_bottom = 40.0
custom_constants/separation = 20
script = ExtResource( 1 )

[node name="AbilityNameLabel" type="Label" parent="."]
margin_top = 9.0
margin_right = 150.0
margin_bottom = 31.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Ability:"
align = 2

[node name="Decrease" type="Button" parent="."]
margin_left = 170.0
margin_right = 187.0
margin_bottom = 40.0
text = "-"

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 207.0
margin_right = 208.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 10.0
step = 1.0
value = 5.0
percent_visible = false

[node name="Increase" type="Button" parent="."]
margin_left = 228.0
margin_right = 248.0
margin_bottom = 40.0
text = "+"

[node name="CurrentLevelLabel" type="Label" parent="."]
margin_left = 268.0
margin_top = 9.0
margin_right = 293.0
margin_bottom = 31.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 2 )
text = "1"
[connection signal="pressed" from="Decrease" to="." method="_on_Decrease_pressed"]
[connection signal="pressed" from="Increase" to="." method="_on_Increase_pressed"]
